Translations by Piyadassii to translation/lt/piyadassi/sutta/kn/snp/vagga1/snp1.8_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/kn/snp/vagga1/snp1.8_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/snp/vagga1/snp1.8_translation-lt-piyadassi.json
@@ -22,7 +22,7 @@
   "snp1.8:5.3": "Ar gimusios, ar dar gimsiančios,",
   "snp1.8:5.4": "tegul visos būtybės būna laimingos!",
   "snp1.8:6.1": "Tegul niekas kito neapgaudinėja,",
-  "snp1.8:6.2": "egul niekas nieko nežemina niekur,",
+  "snp1.8:6.2": "tegul niekas nieko nežemina niekur,",
   "snp1.8:6.3": "Bei dėl pykčio ir neapykantos apimto proto",
   "snp1.8:6.4": "niekas nelinki kitam blogo!”",
   "snp1.8:7.1": "Kaip mama saugotų vaiką, vienintelį vaiką,",
