Translations by Piyadassii to translation/lt/piyadassi/sutta/kn/snp/vagga1/snp1.8_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/kn/snp/vagga1/snp1.8_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/snp/vagga1/snp1.8_translation-lt-piyadassi.json
@@ -30,7 +30,7 @@
   "snp1.8:7.3": "Lygiai taip, tegul jis vysto beribį protą ",
   "snp1.8:7.4": "visų gyvųjų būtybių atžvilgiu.",
   "snp1.8:8.1": "Tegul vysto jis begalinį širdies gerumą",
-  "snp1.8:8.2": "visą pasaulį aprepiantį,",
+  "snp1.8:8.2": "visą pasaulį aprėpiantį,",
   "snp1.8:8.3": "Į viršų, žemyn, aplink,",
   "snp1.8:8.4": "be ribų, be neapykantos, be priešiškumo.",
   "snp1.8:9.1": "Ir stovėdamas, ir eidamas, ir sėdėdamas,",
