Translations by Piyadassii to translation/lt/piyadassi/sutta/kn/snp/vagga1/snp1.8_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/kn/snp/vagga1/snp1.8_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/snp/vagga1/snp1.8_translation-lt-piyadassi.json
@@ -8,7 +8,7 @@
   "snp1.8:2.1": "Nereikliu, neapsunkinančiu aplinkinių,",
   "snp1.8:2.2": "ne per daug užsiėmusiu ir gyvenančiu lengvai;",
   "snp1.8:2.3": "Su nurimusiomis juslėmis, praktišku,",
-  "snp1.8:2.4": "eįžūliu, bei nenunešamu minios jausmu,",
+  "snp1.8:2.4": "neįžūliu, bei nenunešamu minios jausmu,",
   "snp1.8:3.1": "Jis turėtų vengti bet kokio, kad ir nežymaus,",
   "snp1.8:3.2": "išmintingųjų smerkiamo elgesio.",
   "snp1.8:3.3": "„Tegul visos būtybės būna sveikos ir saugios,",
