Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.10_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.10_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "snp1.10:0.1": "Lehrreden-Sammelband ",
+  "snp1.10:0.1": "Lehrreden-Sammelband 1.10 ",
   "snp1.10:0.2": "1.10 Mit Āḷavaka ",
   "snp1.10:1.1": "So habe ich es gehört: ",
   "snp1.10:1.2": "Einmal hielt sich der Buddha bei Āḷavī auf, in der Behausung des Naturgeistes Āḷavaka. ",
