Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.4_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.4_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "snp1.4:0.1": "Lehrreden-Sammelband ",
+  "snp1.4:0.1": "Lehrreden-Sammelband 1.4 ",
   "snp1.4:0.2": "1.4 Mit Bhāradvāja dem Bauern ",
   "snp1.4:1.1": "So habe ich es gehört: ",
   "snp1.4:1.2": "Einmal hielt sich der Buddha im Land der Magadher in den Südlichen Hügeln beim Brahmanendorf Ekanāḷa auf. ",
