Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.8_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.8_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "snp1.8:0.1": "Lehrreden-Sammelband ",
+  "snp1.8:0.1": "Lehrreden-Sammelband 1.8 ",
   "snp1.8:0.2": "1.8 Die Lehrrede von der Liebe ",
   "snp1.8:1.1": "Dies sollten sie tun, die im Guten bewandert sind ",
   "snp1.8:1.2": "und die den Zustand des Friedens erkannt haben. ",
