--- a/translation/de/sabbamitta/sutta/kn/snp/vagga2/snp2.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga2/snp2.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "snp2.1:0.1": "Lehrreden-Sammelband ",
+  "snp2.1:0.1": "Lehrreden-Sammelband 2.1 ",
   "snp2.1:0.2": "2.1 Juwelen ",
   "snp2.1:1.1": "Welche Wesen auch hier versammelt sind, ",
   "snp2.1:1.2": "auf der Erde oder im Himmel, ",
