--- a/translation/de/sabbamitta/sutta/kn/snp/vagga2/snp2.12_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga2/snp2.12_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "snp2.12:0.1": "Lehrreden-Sammelband ",
+  "snp2.12:0.1": "Lehrreden-Sammelband 2.12 ",
   "snp2.12:0.2": "2.12 Vaṅgīsa und sein Mentor Nigrodhakappa ",
   "snp2.12:1.1": "So habe ich es gehört: ",
   "snp2.12:1.2": "Einmal hielt sich der Buddha bei Āḷavī auf, beim Aggāḷava-Baumheiligtum. ",
