--- a/translation/de/sabbamitta/sutta/kn/snp/vagga2/snp2.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga2/snp2.5_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "snp2.5:0.1": "Lehrreden-Sammelband ",
+  "snp2.5:0.1": "Lehrreden-Sammelband 2.5 ",
   "snp2.5:0.2": "2.5 Mit Stachelhaar ",
   "snp2.5:1.1": "So habe ich es gehört: ",
   "snp2.5:1.2": "Einmal hielt sich der Buddha bei Gayā auf dem Felsvorsprung auf, in der Behausung des Naturgeistes Stachelhaar. ",
