Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga4/snp4.15_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga4/snp4.15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga4/snp4.15_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "snp4.15:0.1": "Lehrreden-Sammelband ",
+  "snp4.15:0.1": "Lehrreden-Sammelband 4.15 ",
   "snp4.15:0.2": "4.15 Zu den Waffen greifen ",
   "snp4.15:1.1": "Gefahr geht von denen aus, die zu den Waffen greifen: ",
   "snp4.15:1.2": "Seht nur, wie die Leute streiten! ",
