Translations by sujato to translation/en/sujato/sutta/kn/snp/vagga3/snp3.12_translation-en-sujato.json

--- a/translation/en/sujato/sutta/kn/snp/vagga3/snp3.12_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga3/snp3.12_translation-en-sujato.json
@@ -120,7 +120,7 @@
   "snp3.12:25.2": "internally and externally—",
   "snp3.12:25.3": "whether pleasure or pain ",
   "snp3.12:25.4": "as well as what’s neutral—",
-  "snp3.12:26.1": "having known this as suffering, ",
+  "snp3.12:26.1": "having known it as suffering, ",
   "snp3.12:26.2": "deceptive, falling apart, ",
   "snp3.12:26.3": "one sees them vanish as they’re experienced again and again: ",
   "snp3.12:26.4": "that’s how to understand them. ",
