--- a/translation/en/sujato/sutta/kn/snp/vagga3/snp3.12_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga3/snp3.12_translation-en-sujato.json
@@ -123,7 +123,7 @@
   "snp3.12:26.1": "having known it as suffering, ",
   "snp3.12:26.2": "deceptive, falling apart, ",
   "snp3.12:26.3": "and having experienced it again and again, seeing it vanish:",
-  "snp3.12:26.4": "that’s how to understand them. ",
+  "snp3.12:26.4": "that’s how to understand it. ",
   "snp3.12:26.5": "With the ending of feelings, a mendicant ",
   "snp3.12:26.6": "is hungerless, extinguished.” ",
   "snp3.12:27.1": "“‘Could there be another way?’ … ",
