Translations by sujato to translation/en/sujato/sutta/kn/snp/vagga3/snp3.12_translation-en-sujato.json

--- a/translation/en/sujato/sutta/kn/snp/vagga3/snp3.12_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga3/snp3.12_translation-en-sujato.json
@@ -117,7 +117,7 @@
   "snp3.12:24.5": "When a mendicant meditates in this way they can expect enlightenment or non-return.” ",
   "snp3.12:24.6": "Then the Teacher went on to say: ",
   "snp3.12:25.1": "“Consider everything that is felt ",
-  "snp3.12:25.2": "internally and externally—",
+  "snp3.12:25.2": "pleasure together with pain,",
   "snp3.12:25.3": "whether pleasure or pain ",
   "snp3.12:25.4": "as well as what’s neutral—",
   "snp3.12:26.1": "having known it as suffering, ",
