Translations by sujato to translation/en/sujato/sutta/kn/snp/vagga3/snp3.12_translation-en-sujato.json

--- a/translation/en/sujato/sutta/kn/snp/vagga3/snp3.12_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga3/snp3.12_translation-en-sujato.json
@@ -119,7 +119,7 @@
   "snp3.12:25.1": "“Having known everything that is felt—",
   "snp3.12:25.2": "whether pleasure or pain,",
   "snp3.12:25.3": "as well as what’s neutral,",
-  "snp3.12:25.4": "both internally and externally.",
+  "snp3.12:25.4": "both internally and externally—",
   "snp3.12:26.1": "as suffering, ",
   "snp3.12:26.2": "deceptive, falling apart, ",
   "snp3.12:26.3": "and having experienced it again and again, seeing it vanish:",
