--- a/translation/en/sujato/sutta/kn/snp/vagga3/snp3.12_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga3/snp3.12_translation-en-sujato.json
@@ -122,7 +122,7 @@
   "snp3.12:25.4": "both internally and externally—",
   "snp3.12:26.1": "as suffering, ",
   "snp3.12:26.2": "deceptive, falling apart;",
-  "snp3.12:26.3": "and having experienced it again and again, seeing it vanish:",
+  "snp3.12:26.3": "they see it vanish with every touch:",
   "snp3.12:26.4": "that’s how they understand it. ",
   "snp3.12:26.5": "With the ending of feelings, a mendicant ",
   "snp3.12:26.6": "is hungerless, extinguished.” ",
