--- a/translation/en/sujato/sutta/kn/snp/vagga1/snp1.1_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga1/snp1.1_translation-en-sujato.json
@@ -34,7 +34,7 @@
   "snp1.1:8.3": "Such a mendicant sheds this world and the next, ",
   "snp1.1:8.4": "as a snake its old worn-out skin. ",
   "snp1.1:9.1": "They have not run too far nor run back, ",
-  "snp1.1:9.2": "for they know that nothing in the world is what it seems. ",
+  "snp1.1:9.2": "for they know that nothing in the world <j>is what it seems. ",
   "snp1.1:9.3": "Such a mendicant sheds this world and the next, ",
   "snp1.1:9.4": "as a snake its old worn-out skin. ",
   "snp1.1:10.1": "They have not run too far nor run back, ",
@@ -68,5 +68,5 @@
   "snp1.1:17.1": "They’ve given up the five hindrances, ",
   "snp1.1:17.2": "untroubled, rid of doubt, free of thorns. ",
   "snp1.1:17.3": "Such a mendicant sheds this world and the next, ",
-  "snp1.1:17.4": "as a snake its old worn-out skin. "
+  "snp1.1:17.4": "as a snake its old worn-out skin."
 }
