--- a/translation/en/sujato/sutta/kn/snp/vagga2/snp2.5_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga2/snp2.5_translation-en-sujato.json
@@ -20,7 +20,7 @@
   "snp2.5:4.2": "But anyway, ask what you wish.” ",
   "snp2.5:4.3": "Then Spiky addressed the Buddha in verse: ",
   "snp2.5:5.1": "“Where do greed and hate come from? ",
-  "snp2.5:5.2": "From where do discontent, desire, and terror spring? ",
+  "snp2.5:5.2": "From where spring discontent, desire, and terror? ",
   "snp2.5:5.3": "Where do the mind’s thoughts originate, ",
   "snp2.5:5.4": "like a crow let loose by boys.” ",
   "snp2.5:6.1": "“Greed and hate come from here; ",
@@ -34,5 +34,5 @@
   "snp2.5:8.1": "Those who understand where they come from ",
   "snp2.5:8.2": "get rid of them—listen up, spirit! ",
   "snp2.5:8.3": "They cross this flood so hard to cross, ",
-  "snp2.5:8.4": "not crossed before, so as to not be reborn.” "
+  "snp2.5:8.4": "not crossed before, so as to not be reborn.”"
 }
