--- a/translation/en/sujato/sutta/kn/snp/vagga3/snp3.11_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga3/snp3.11_translation-en-sujato.json
@@ -82,8 +82,8 @@
   "snp3.11:20.3": "The time of Asita’s instruction had arrived; ",
   "snp3.11:20.4": "so he asked the excellent sage about the highest sagacity. ",
   "snp3.11:20.5": "The introductory verses are finished. ",
-  "snp3.11:21.1": "“I now know that Asita’s prediction ",
-  "snp3.11:21.2": "has turned out to be true. ",
+  "snp3.11:21.1": "“I now know that Asita’s words ",
+  "snp3.11:21.2": "have turned out to be true. ",
   "snp3.11:21.3": "I ask you this, Gotama, ",
   "snp3.11:21.4": "who has gone beyond all things: ",
   "snp3.11:22.1": "For one who has entered the homeless life, ",
@@ -183,5 +183,5 @@
   "snp3.11:45.1": "But one who, knowing, is restrained, ",
   "snp3.11:45.2": "knowing, does not speak much; ",
   "snp3.11:45.3": "that sage is worthy of sagacity, ",
-  "snp3.11:45.4": "that sage has achieved sagacity.” "
+  "snp3.11:45.4": "that sage has achieved sagacity.”"
 }
