Translations by sujato to translation/en/sujato/sutta/kn/snp/vagga1/snp1.8_translation-en-sujato.json

--- a/translation/en/sujato/sutta/kn/snp/vagga1/snp1.8_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga1/snp1.8_translation-en-sujato.json
@@ -30,7 +30,7 @@
   "snp1.8:7.3": "so too for all creatures ",
   "snp1.8:7.4": "unfold a boundless heart. ",
   "snp1.8:8.1": "With love for the whole world, ",
-  "snp1.8:8.2": "unfold a boundless heart. ",
+  "snp1.8:8.2": "unfold a boundless heart: ",
   "snp1.8:8.3": "Above, below, all round, ",
   "snp1.8:8.4": "unconstricted, without enemy or foe. ",
   "snp1.8:9.1": "When standing, walking, sitting, ",
