--- a/translation/en/sujato/sutta/kn/snp/vagga1/snp1.8_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga1/snp1.8_translation-en-sujato.json
@@ -31,7 +31,7 @@
   "snp1.8:7.4": "unfold a boundless heart. ",
   "snp1.8:8.1": "With love for the whole world, ",
   "snp1.8:8.2": "unfold a boundless heart: ",
-  "snp1.8:8.3": "Above, below, all round, ",
+  "snp1.8:8.3": "above, below, all round, ",
   "snp1.8:8.4": "unconstricted, without enemy or foe. ",
   "snp1.8:9.1": "When standing, walking, sitting, ",
   "snp1.8:9.2": "or lying down while yet unweary, ",
