Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "snp1.2:0.1": "Lehrreden-Sammelband 1.2 ",
-  "snp1.2:0.2": "Mit Dhaniya dem Kuhhirten "
+  "snp1.2:0.2": "Mit Dhaniya dem Kuhhirten ",
+  "snp1.2:1.1": "„Ich habe meinen Reis gekocht und meine Milch gemolken“, "
 }
