--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "snp1.2:0.1": "Lehrreden-Sammelband 1.2 ",
   "snp1.2:0.2": "Mit Dhaniya dem Kuhhirten ",
   "snp1.2:1.1": "„Ich habe meinen Reis gekocht und meine Milch gemolken“, ",
-  "snp1.2:1.2": "sagte Dhaniya der Kuhhirte, "
+  "snp1.2:1.2": "sagte Dhaniya der Kuhhirte, ",
+  "snp1.2:1.3": "„ich bleibe mit meiner Familie im Bereich des Ufers der Mahī. "
 }
