--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "snp1.2:1.1": "„Ich habe meinen Reis gekocht und meine Milch gemolken“, ",
   "snp1.2:1.2": "sagte Dhaniya der Kuhhirte, ",
   "snp1.2:1.3": "„ich bleibe mit meiner Familie am Ufer der Mahī. ",
-  "snp1.2:1.4": "Meine Hütte ist gedeckt, mein Feuer entzündet: "
+  "snp1.2:1.4": "Meine Hütte ist gedeckt, mein Feuer entzündet: ",
+  "snp1.2:1.5": "Darum, Wolke, regne, wenn du willst.“ "
 }
