--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "snp1.2:1.2": "sagte Dhaniya der Kuhhirte, ",
   "snp1.2:1.3": "„ich bleibe mit meiner Familie am Ufer der Mahī. ",
   "snp1.2:1.4": "Meine Hütte ist gedeckt, mein Feuer entzündet: ",
-  "snp1.2:1.5": "Darum, Wolke, regne, wenn du willst.“ "
+  "snp1.2:1.5": "Darum, Wolke, regne, wenn du willst.“ ",
+  "snp1.2:2.1": "„Ich koche nicht vor Wut und habe die Härte aus meinem Herzen gezogen“, "
 }
