Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "snp1.2:2.2": "sagte der Buddha, ",
   "snp1.2:2.3": "„ich bleibe eine Nacht am Ufer der Mahī. ",
   "snp1.2:2.4": "Meine Hütte ist weit offen, mein Feuer gelöscht: ",
-  "snp1.2:2.5": "Darum, Wolke, regne, wenn du willst.“ "
+  "snp1.2:2.5": "Darum, Wolke, regne, wenn du willst.“ ",
+  "snp1.2:3.1": "„Keine Bremsen und Stechmücken gibt es hier“, "
 }
