--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "snp1.2:2.5": "Darum, Wolke, regne, wenn du willst.“ ",
   "snp1.2:3.1": "„Keine Bremsen und Stechmücken gibt es hier“, ",
   "snp1.2:3.2": "sagte Dhaniya der Kuhhirte, ",
-  "snp1.2:3.3": "„Kühe grasen auf dem üppigen Gras der Wiesen. "
+  "snp1.2:3.3": "„Kühe grasen auf dem üppigen Gras der Wiesen. ",
+  "snp1.2:3.4": "Sie kommen durch, auch wenn der Regen fällt: "
 }
