--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "snp1.2:2.2": "sagte der Buddha, ",
   "snp1.2:2.3": "„ich bleibe eine Nacht am Ufer der Mahī. ",
   "snp1.2:2.4": "Meine Hütte ist weit offen, mein Feuer gelöscht: ",
-  "snp1.2:2.5": "Darum, Wolke, regne, wenn du willst.“ ",
+  "snp1.2:2.5": "Drum regne, Wolke, wenn du willst.“ ",
   "snp1.2:3.1": "„Keine Bremsen und Stechmücken gibt es hier“, ",
   "snp1.2:3.2": "sagte Dhaniya der Kuhhirte, ",
   "snp1.2:3.3": "„Kühe grasen auf dem üppigen Gras der Wiesen. ",
