Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "snp1.2:3.2": "sagte Dhaniya der Kuhhirte, ",
   "snp1.2:3.3": "„Kühe grasen auf dem üppigen Gras der Wiesen. ",
   "snp1.2:3.4": "Sie kommen durch, auch wenn der Regen fällt: ",
-  "snp1.2:3.5": "Drum regne, Wolke, wenn du willst.“ "
+  "snp1.2:3.5": "Drum regne, Wolke, wenn du willst.“ ",
+  "snp1.2:4.1": "„Ich band ein Floß zusamen und machte es gut“, "
 }
