Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "snp1.2:3.5": "Drum regne, Wolke, wenn du willst.“ ",
   "snp1.2:4.1": "„Ich band ein Floß zusamen und machte es gut“, ",
   "snp1.2:4.2": "sagte der Buddha, ",
-  "snp1.2:4.3": "„und mit ihm setzte ich über, erreichte das jenseitige Ufer und vertrieb die Flut. "
+  "snp1.2:4.3": "„und mit ihm setzte ich über, erreichte das jenseitige Ufer und vertrieb die Flut. ",
+  "snp1.2:4.4": "Nun brauche ich kein Floß mehr: "
 }
