Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "snp1.2:4.3": "„und mit ihm setzte ich über, erreichte das jenseitige Ufer und vertrieb die Flut. ",
   "snp1.2:4.4": "Nun brauche ich kein Floß mehr: ",
   "snp1.2:4.5": "Drum regne, Wolke, wenn du willst.“ ",
-  "snp1.2:5.1": "„Meine Frau ist gehorsam, nicht zügellos“, "
+  "snp1.2:5.1": "„Meine Frau ist gehorsam, nicht zügellos“, ",
+  "snp1.2:5.2": "sagte Dhaniya der Kuhhirte, "
 }
