Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "snp1.2:4.4": "Nun brauche ich kein Floß mehr: ",
   "snp1.2:4.5": "Drum regne, Wolke, wenn du willst.“ ",
   "snp1.2:5.1": "„Meine Frau ist gehorsam, nicht zügellos“, ",
-  "snp1.2:5.2": "sagte Dhaniya der Kuhhirte, "
+  "snp1.2:5.2": "sagte Dhaniya der Kuhhirte, ",
+  "snp1.2:5.3": "„lange haben wir glücklich zusammengelebt. "
 }
