--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "snp1.2:4.5": "Drum regne, Wolke, wenn du willst.“ ",
   "snp1.2:5.1": "„Meine Frau ist gehorsam, nicht zügellos“, ",
   "snp1.2:5.2": "sagte Dhaniya der Kuhhirte, ",
-  "snp1.2:5.3": "„lange haben wir glücklich zusammengelebt. "
+  "snp1.2:5.3": "„lange haben wir glücklich zusammengelebt. ",
+  "snp1.2:5.4": "Ich höre nichts Schlechtes über sie: "
 }
