--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "snp1.2:5.1": "„Meine Frau ist gehorsam, nicht zügellos“, ",
   "snp1.2:5.2": "sagte Dhaniya der Kuhhirte, ",
   "snp1.2:5.3": "„lange haben wir glücklich zusammengelebt. ",
-  "snp1.2:5.4": "Ich höre nichts Schlechtes über sie: "
+  "snp1.2:5.4": "Ich höre nichts Schlechtes über sie: ",
+  "snp1.2:5.5": "Drum regne, Wolke, wenn du willst.“ "
 }
