--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -29,5 +29,6 @@
   "snp1.2:6.1": "„Mein Geist ist gehorsam und befreit“, ",
   "snp1.2:6.2": "sagte der Buddha, ",
   "snp1.2:6.3": "„lange wurde er genährt und gut gezähmt. ",
-  "snp1.2:6.4": "Nichts Schlechtes ist in mir zu finden: "
+  "snp1.2:6.4": "Nichts Schlechtes ist in mir zu finden: ",
+  "snp1.2:6.5": "Drum regne, Wolke, wenn du willst.“ "
 }
