--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "snp1.2:6.3": "„lange wurde er genährt und gut gezähmt. ",
   "snp1.2:6.4": "Nichts Schlechtes ist in mir zu finden: ",
   "snp1.2:6.5": "Drum regne, Wolke, wenn du willst.“ ",
-  "snp1.2:7.1": "„Selbständig erhalte ich meinen Lohn“, "
+  "snp1.2:7.1": "„Selbständig erhalte ich meinen Lohn“, ",
+  "snp1.2:7.2": "sagte Dhaniya der Kuhhirte, "
 }
