--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -33,5 +33,6 @@
   "snp1.2:6.5": "Drum regne, Wolke, wenn du willst.“ ",
   "snp1.2:7.1": "„Selbständig erhalte ich meinen Lohn“, ",
   "snp1.2:7.2": "sagte Dhaniya der Kuhhirte, ",
-  "snp1.2:7.3": "„und ebenso meine gesunden Kinder. "
+  "snp1.2:7.3": "„und ebenso meine gesunden Kinder. ",
+  "snp1.2:7.4": "Ich höre nichts Schlechtes über sie: "
 }
