--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "snp1.2:7.3": "„und ebenso meine gesunden Kinder. ",
   "snp1.2:7.4": "Ich höre nichts Schlechtes über sie: ",
   "snp1.2:7.5": "Drum regne, Wolke, wenn du willst.“ ",
-  "snp1.2:8.1": "„Ich bin niemandes Lakai“, "
+  "snp1.2:8.1": "„Ich bin niemandes Lakai“, ",
+  "snp1.2:8.2": "sagte der Buddha, "
 }
