--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "snp1.2:7.5": "Drum regne, Wolke, wenn du willst.“ ",
   "snp1.2:8.1": "„Ich bin niemandes Lakai“, ",
   "snp1.2:8.2": "sagte der Buddha, ",
-  "snp1.2:8.3": "„mit dem, was ich verdient habe, wandere ich durch die Welt. "
+  "snp1.2:8.3": "„mit dem, was ich verdient habe, wandere ich durch die Welt. ",
+  "snp1.2:8.4": "Ich brauche keinen Lohn mehr: "
 }
