--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -40,5 +40,6 @@
   "snp1.2:8.2": "sagte der Buddha, ",
   "snp1.2:8.3": "„mit dem, was ich verdient habe, wandere ich durch die Welt. ",
   "snp1.2:8.4": "Ich brauche keinen Lohn mehr: ",
-  "snp1.2:8.5": "Drum regne, Wolke, wenn du willst.“ "
+  "snp1.2:8.5": "Drum regne, Wolke, wenn du willst.“ ",
+  "snp1.2:9.1": "„Ich habe Färsen und Milchkälber“, "
 }
