Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "snp1.2:9.1": "„Ich habe Färsen und Milchkälber“, ",
   "snp1.2:9.2": "sagte Dhaniya der Kuhhirte, ",
   "snp1.2:9.3": "„trächtige Kühe und Kühe für die Zucht. ",
-  "snp1.2:9.4": "Ich habe auch einen Stier, den Anführer der Herde: "
+  "snp1.2:9.4": "Ich habe auch einen Stier, den Anführer der Herde: ",
+  "snp1.2:9.5": "Drum regne, Wolke, wenn du willst.“ "
 }
