--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -46,5 +46,6 @@
   "snp1.2:9.3": "„trächtige Kühe und Kühe für die Zucht. ",
   "snp1.2:9.4": "Ich habe auch einen Stier, den Anführer der Herde: ",
   "snp1.2:9.5": "Drum regne, Wolke, wenn du willst.“ ",
-  "snp1.2:10.1": "„Ich habe keine Färsen oder Milchkälber“, "
+  "snp1.2:10.1": "„Ich habe keine Färsen oder Milchkälber“, ",
+  "snp1.2:10.2": "sagte der Buddha, "
 }
