--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "snp1.2:10.2": "sagte der Buddha, ",
   "snp1.2:10.3": "„keine trächtigen Kühe oder Kühe für die Zucht. ",
   "snp1.2:10.4": "Ich habe keinen Stier, keinen Anführer der Herde: ",
-  "snp1.2:10.5": "Drum regne, Wolke, wenn du willst.“ "
+  "snp1.2:10.5": "Drum regne, Wolke, wenn du willst.“ ",
+  "snp1.2:16.1": "„Eure Kinder sind euer Entzücken! "
 }
