--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -53,5 +53,6 @@
   "snp1.2:10.5": "Drum regne, Wolke, wenn du willst.“ ",
   "snp1.2:16.1": "„Eure Kinder sind euer Entzücken!“, ",
   "snp1.2:16.2": "sagte Māra der Böse, ",
-  "snp1.2:16.3": "„Auch euer Vieh ist Entzücken für euch! "
+  "snp1.2:16.3": "„Auch euer Vieh ist Entzücken für euch! ",
+  "snp1.2:16.4": "Denn Bindungen sind Entzücken für einen Mann; "
 }
