Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -54,5 +54,6 @@
   "snp1.2:16.1": "„Eure Kinder sind euer Entzücken!“, ",
   "snp1.2:16.2": "sagte Māra der Böse, ",
   "snp1.2:16.3": "„Auch euer Vieh ist Entzücken für euch! ",
-  "snp1.2:16.4": "Denn Bindungen sind Entzücken für einen Mann; "
+  "snp1.2:16.4": "Denn Bindungen sind Entzücken für einen Mann; ",
+  "snp1.2:16.5": "ohne Bindungen gibt es kein Entzücken.“ "
 }
