Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -56,5 +56,6 @@
   "snp1.2:16.3": "„Auch euer Vieh ist Entzücken für euch! ",
   "snp1.2:16.4": "Denn Bindungen sind Entzücken für einen Mann; ",
   "snp1.2:16.5": "ohne Bindungen gibt es kein Entzücken.“ ",
-  "snp1.2:17.1": "„Eure Kinder sind euer Kummer!“, "
+  "snp1.2:17.1": "„Eure Kinder sind euer Kummer!“, ",
+  "snp1.2:17.2": "sagte der Buddha, "
 }
