--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -59,5 +59,6 @@
   "snp1.2:17.1": "„Eure Kinder sind euer Kummer!“, ",
   "snp1.2:17.2": "sagte der Buddha, ",
   "snp1.2:17.3": "„Auch euer Vieh ist Kummer für euch! ",
-  "snp1.2:17.4": "Denn Bindungen sind Kummer für einen Mann; "
+  "snp1.2:17.4": "Denn Bindungen sind Kummer für einen Mann; ",
+  "snp1.2:17.5": "ohne Bindungen gibt es keinen Kummer.“ "
 }
