--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -51,6 +51,28 @@
   "snp1.2:10.3": "„keine trächtigen Kühe oder Kühe für die Zucht. ",
   "snp1.2:10.4": "Ich habe keinen Stier, keinen Anführer der Herde: ",
   "snp1.2:10.5": "Drum regne, Wolke, wenn du willst.“ ",
+  "snp1.2:11.1": "„Die Pfosten sind gut eingeschlagen, unerschütterlich“, ",
+  "snp1.2:11.2": "sagte Dhaniya der Kuhhirte, ",
+  "snp1.2:11.3": "„die Halfter aus Gras sind neu und gut gefertigt, ",
+  "snp1.2:11.4": "nicht einmal die Kälber können sie zerreißen: ",
+  "snp1.2:11.5": "Drum regne, Wolke, wenn du willst.“ ",
+  "snp1.2:12.1": "„Wie ein Stier, der die Fesseln durchbrach“, ",
+  "snp1.2:12.2": "sagte der Buddha, ",
+  "snp1.2:12.3": "„wie ein Elefant, so zerriss ich die Ranke. ",
+  "snp1.2:12.4": "Ich werde nie wieder in einem Mutterleib liegen: ",
+  "snp1.2:12.5": "Drum regne, Wolke, wenn du willst.“ ",
+  "snp1.2:13.1": "Eben da ergoss sich eine große Gewitterwolke ",
+  "snp1.2:13.2": "über die Niederungen und das Hochland. ",
+  "snp1.2:13.3": "Als er die Wolke regnen hörte, ",
+  "snp1.2:13.4": "sagte Dhaniya: ",
+  "snp1.2:14.1": "„Es ist kein geringes Glück für uns, ",
+  "snp1.2:14.2": "dass wir den Buddha gesehen haben. ",
+  "snp1.2:14.3": "Wir nehmen Zuflucht zu dir, Seher. ",
+  "snp1.2:14.4": "Du großer Weiser, bitte sei unser Lehrer. ",
+  "snp1.2:15.1": "Meine Frau und ich werden gehorsam ",
+  "snp1.2:15.2": "unter dem Heiligen das geistliche Leben führen. ",
+  "snp1.2:15.3": "Wenn wir über Geburt und Tod hinausgegangen sind, ",
+  "snp1.2:15.4": "werden wir dem Leiden ein Ende machen.“ ",
   "snp1.2:16.1": "„Eure Kinder sind euer Entzücken!“, ",
   "snp1.2:16.2": "sagte Māra der Böse, ",
   "snp1.2:16.3": "„Auch euer Vieh ist Entzücken für euch! ",
