--- a/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
@@ -134,7 +134,7 @@
   "snp3.6:32.1": "Having studied proliferation and name & form ",
   "snp3.6:32.2": "inside and out—the root of disease; ",
   "snp3.6:32.3": "released from the root bondage to all disease: ",
-  "snp3.6:32.4": "such an one is rightly called ‘studied’. ",
+  "snp3.6:32.4": "such a one is rightly called ‘studied’. ",
   "snp3.6:33.1": "Refraining from all evil here, ",
   "snp3.6:33.2": "heroic, he escapes from the suffering of hell; ",
   "snp3.6:33.3": "he is heroic and energetic: ",
