Translations by sujato to translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json

--- a/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
@@ -138,7 +138,7 @@
   "snp3.6:33.1": "Refraining from all evil here, ",
   "snp3.6:33.2": "heroic, he escapes from the suffering of hell; ",
   "snp3.6:33.3": "he is heroic and energetic: ",
-  "snp3.6:33.4": "such an one is rightly called ‘hero’. ",
+  "snp3.6:33.4": "such a one is rightly called ‘hero’. ",
   "snp3.6:34.1": "Whoever’s bonds are cut, ",
   "snp3.6:34.2": "the root of clinging inside and out; ",
   "snp3.6:34.3": "released from the root bondage to all clinging: ",
