Translations by sujato to translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json

--- a/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
@@ -142,7 +142,7 @@
   "snp3.6:34.1": "Whoever’s bonds are cut, ",
   "snp3.6:34.2": "the root of clinging inside and out; ",
   "snp3.6:34.3": "released from the root bondage to all clinging: ",
-  "snp3.6:34.4": "such an one is rightly called ‘thoroughbred’.” ",
+  "snp3.6:34.4": "such a one is rightly called ‘thoroughbred’.” ",
   "snp3.6:35.1": "And then Sabhiya asked another question: ",
   "snp3.6:36.1": "“What must one attain to be called ‘scholar’?” ",
   "snp3.6:36.2": "said Sabhiya, ",
