--- a/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
@@ -88,7 +88,7 @@
   "snp3.6:20.1": "A peaceful one who has given up good and evil, ",
   "snp3.6:20.2": "stainless, understanding this world and the next, ",
   "snp3.6:20.3": "gone beyond rebirth and death: ",
-  "snp3.6:20.4": "such a one is rightly called ‘ascetic’. ",
+  "snp3.6:20.4": "one such is rightly called ‘ascetic’. ",
   "snp3.6:21.1": "Having washed off all bad things ",
   "snp3.6:21.2": "inside and out in the whole world, ",
   "snp3.6:21.3": "among gods and humans bound to creations, ",
