Translations by sujato to translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json

--- a/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
@@ -115,7 +115,7 @@
   "snp3.6:27.1": "They have examined whiteness ",
   "snp3.6:27.2": "both inside and out; understanding purity, ",
   "snp3.6:27.3": "they have left dark and bright behind: ",
-  "snp3.6:27.4": "such a one is rightly called ‘a wise scholar’.” ",
+  "snp3.6:27.4": "one such is rightly called ‘a wise scholar’.” ",
   "snp3.6:28.1": "Understanding the nature of the bad and the good ",
   "snp3.6:28.2": "inside and out in the whole world; ",
   "snp3.6:28.3": "one worthy of honor by gods and humans, ",
