--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -14,7 +14,7 @@
   "snp1.2:3.1": "„Keine Bremsen und Stechmücken gibt es hier“, ",
   "snp1.2:3.2": "sagte Dhaniya der Kuhhirte, ",
   "snp1.2:3.3": "„Kühe grasen auf dem üppigen Gras der Wiesen. ",
-  "snp1.2:3.4": "Sie kommen durch, auch wenn der Regen fällt: ",
+  "snp1.2:3.4": "Sie kommen zurecht, auch wenn der Regen fällt: ",
   "snp1.2:3.5": "Drum regne, Wolke, wenn du willst.“ ",
   "snp1.2:4.1": "„Ich band ein Floß zusamen und machte es gut“, ",
   "snp1.2:4.2": "sagte der Buddha, ",
