Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -33,7 +33,7 @@
   "snp1.2:6.5": "Drum regne, Wolke, wenn du willst.“ ",
   "snp1.2:7.1": "„Selbständig erhalte ich meinen Lohn“, ",
   "snp1.2:7.2": "sagte Dhaniya der Kuhhirte, ",
-  "snp1.2:7.3": "„und ebenso meine gesunden Kinder. ",
+  "snp1.2:7.3": "„und meine gesunden Kinder tun ebenso. ",
   "snp1.2:7.4": "Ich höre nichts Schlechtes über sie: ",
   "snp1.2:7.5": "Drum regne, Wolke, wenn du willst.“ ",
   "snp1.2:8.1": "„Ich bin niemandes Lakai“, ",
