Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga1/snp1.2_translation-de-sabbamitta.json
@@ -31,7 +31,7 @@
   "snp1.2:6.3": "„lange wurde er genährt und gut gezähmt. ",
   "snp1.2:6.4": "Nichts Schlechtes ist in mir zu finden: ",
   "snp1.2:6.5": "Drum regne, Wolke, wenn du willst.“ ",
-  "snp1.2:7.1": "„Selbständig erhalte ich meinen Lohn“, ",
+  "snp1.2:7.1": "„Selbständig erarbeite ich meinen Lohn“, ",
   "snp1.2:7.2": "sagte Dhaniya der Kuhhirte, ",
   "snp1.2:7.3": "„und meine gesunden Kinder tun ebenso. ",
   "snp1.2:7.4": "Ich höre nichts Schlechtes über sie: ",
