--- a/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
@@ -162,7 +162,7 @@
   "snp3.6:39.2": "always understanding the teaching, ",
   "snp3.6:39.3": "everywhere not stuck, freed in mind, ",
   "snp3.6:39.4": "who has no repulsion: they are ‘well-conducted’. ",
-  "snp3.6:40.1": "Having banished any deed that results in suffering—",
+  "snp3.6:40.1": "They wander full of wisdom, having banished ",
   "snp3.6:40.2": "above, below, all round, between—",
   "snp3.6:40.3": "deceit and conceit, as well as greed and anger, ",
   "snp3.6:40.4": "they live full of wisdom. ",
