--- a/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
@@ -163,7 +163,7 @@
   "snp3.6:39.3": "everywhere not stuck, freed in mind, ",
   "snp3.6:39.4": "who has no repulsion: they are ‘well-conducted’. ",
   "snp3.6:40.1": "They wander full of wisdom, ",
-  "snp3.6:40.2": "any deed that results in suffering,",
+  "snp3.6:40.2": "having banished any deed that results in suffering,",
   "snp3.6:40.3": "deceit and conceit, as well as greed and anger, ",
   "snp3.6:40.4": "—above, below, all round, between.",
   "snp3.6:40.5": "They have made a limit on name & form; ",
