--- a/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/snp/vagga3/snp3.6_translation-en-sujato.json
@@ -3,7 +3,7 @@
   "snp3.6:0.2": "With Sabhiya ",
   "snp3.6:1.1": "So I have heard. ",
   "snp3.6:1.2": "At one time the Buddha was staying near Rājagaha, in the Bamboo Grove, the squirrels’ feeding ground. ",
-  "snp3.6:1.3": "Now at that time the wanderer Sabhiya had been presented with several questions by a deity who was a former relative, saying: ",
+  "snp3.6:1.3": "Now at that time the wanderer Sabhiya had been presented with several questions by a deity who was a former blood relation, saying: ",
   "snp3.6:1.4": "“Sabhiya, you should live the spiritual life with whatever ascetic or brahmin answers these questions.” ",
   "snp3.6:2.1": "Then Sabhiya, after learning those questions in the presence of that deity, approached those ascetics and brahmins who led an order and a community, and taught a community, who were well-known and famous religious founders, regarded as holy by many people. That is, ",
   "snp3.6:2.2": "Pūraṇa Kassapa, Makkhali Gosāla, Nigaṇṭha Nāṭaputta, Sañjaya Belaṭṭhiputta, Pakudha Kaccāyana, and Ajita Kesakambala. ",
